clavas URL in dialogue no longer a harmful link to nowhere. fixes #133

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -210,7 +210,13 @@ a {
     z-index: 5000;
 }
 
+.disabledLink {
+    text-decoration: underline;
+    cursor: default;
+}
+
 .error {
   color: red;
   font-weight: bold;
 }
+
