--- a/src/styles/DataGrid.sass
+++ b/src/styles/DataGrid.sass
@@ -156,12 +156,16 @@ $row-height: 2.5em;
   // Column widths - static
   table {
     tbody td, thead th {
+      &.recommended {
+        width: 2%;
+      }
+
       &.name {
         width: 20%;
       }
 
       &.description {
-        width: 20%;
+        width: 15%;
       }
 
       &.registrationDate {
@@ -284,7 +288,7 @@ div.component-info {
       color: #33b;
     }
   }
-    
+
   td.name {
     font-style: italic;
   }
