linked components in editor: lower opacity + link glyph to indicate. Refs #153

--- a/src/styles/ComponentEditor.sass
+++ b/src/styles/ComponentEditor.sass
@@ -63,6 +63,12 @@
         background: #f9f9f9;
       }
 
+      &.linked {
+        .componentBody {
+          opacity: 50%;
+        }
+      }
+
     }
 
     // animate item appearance and removal in editor
