ux for adding/editing cues

--- a/src/styles/ComponentEditor.sass
+++ b/src/styles/ComponentEditor.sass
@@ -150,8 +150,8 @@
         }
       }
 
-      .auto-value {
-        div.additional-autovalue-expression {
+      .auto-value, .cues {
+        div.additional-autovalue-expression, div.additional-cue {
           text-align: right;
         }
 
