include cues in element view

--- a/src/styles/ComponentViewer.sass
+++ b/src/styles/ComponentViewer.sass
@@ -67,11 +67,11 @@
 }
 
 .valueScheme, .elemAttrs li, .attrAttrs li {
-    span {
 
-      vertical-align: top;
+    span, div {
 
       &.attrLabel {
+        vertical-align: top;
         display: inline-block;
         width: 40%;
         text-align: right;
@@ -79,6 +79,7 @@
       }
 
       &.attrValue {
+        vertical-align: top;
         display: inline-block;
         width: 60%;
       }
