fixed small display issues in elem/attr/comp view

--- a/src/styles/ComponentViewer.sass
+++ b/src/styles/ComponentViewer.sass
@@ -70,17 +70,19 @@
 
     span, div {
 
-      &.attrLabel {
-        vertical-align: top;
+      &.attrLabel, &.attrValue {
         display: inline-block;
+        vertical-align: top;
+        margin-top: .4em;
+      }
+
+      &.attrLabel {
         width: 40%;
         text-align: right;
         padding-right: 1em;
       }
 
       &.attrValue {
-        vertical-align: top;
-        display: inline-block;
         width: 60%;
       }
     }
