view documenation on spec root level. Refs #155

--- a/src/styles/ComponentViewer.sass
+++ b/src/styles/ComponentViewer.sass
@@ -9,6 +9,21 @@
       margin: 0;
       padding-left: 30px;
       width: 38%;
+
+      li {
+        div, span {
+          vertical-align: top;
+
+          &.propertyLabel {
+            display: inline-block;
+            min-width: 15%;
+          }
+        }
+      }
+    }
+
+    .rootSpecDocumentation {
+      display: inline-block;
     }
   }
 
