--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,4 @@
-$footer-height: 2em;
-$header-height: 60px;
+@import './variables';
 
 /* Stiziles */
 html {
@@ -219,4 +218,3 @@ a {
   color: red;
   font-weight: bold;
 }
-
