adapting vocabulary selection to changes in proxy/api

--- a/src/styles/EditorDialog.sass
+++ b/src/styles/EditorDialog.sass
@@ -189,7 +189,7 @@ div.external-vocabulary-import {
 
   th, td {
     display: inline-block;
-    width: (720px/7);
+    width: calc(720px/7);
     line-height: 1.6em;
     min-height: 28px;
     font-size: 0.8em;
