--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -33,3 +33,6 @@ $deprecated-status-item-color: #f00
 $footer-height: 2em
 $header-height: 60px
 $data-grid-row-height: 2.5em
+
+$ccr-table-dialog-witdh: 750px
+$ccr-table-scroll-border-space: 30px
