adding a warning message to the form when editing a published item. Refs #141

--- a/src/styles/ComponentEditor.sass
+++ b/src/styles/ComponentEditor.sass
@@ -19,6 +19,10 @@
     }
   }
 
+  .publicItemEditingWarning {
+    max-width: 80%
+  }
+
   .cmdi-version-mode-selector {
     width: 15em;
     float: right;
