--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -215,6 +215,11 @@ a {
 }
 
 .error {
-  color: red;
+  color: #f99;
+  font-weight: bold;
+}
+
+.danger {
+  background-color: #fcc;
   font-weight: bold;
 }
